# float-liner

./: .gitignore  README.md  index.html  knowledge.md  package-lock.json  package.json  vite.config.ts
.agents/types/: tools.ts
docs/: DESIGN-templated-doors.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BlockItem.tsx  Pane.tsx  PaneLayout.tsx  PlateBlock.tsx  StaticBlockRenderer.tsx  VirtualBlockList.tsx
src/hooks/: useBlockStore.ts  usePaneStore.ts  useSyncedYDoc.ts
src/lib/: executor.ts  types.ts
src/styles/: index.css
