[package]
name = "float-substrate"
version = "0.1.0"
description = "Blocks is the app - CRDT-based outliner"
authors = ["evan"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "float_substrate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
# CRDT foundation
yrs = "0.18"
# Utilities
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
# Async runtime for shell execution
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread"] }
pulldown-cmark = "0.13.0"
# Home directory detection
dirs = "5"
